fix: Fixed toolbar bg not showing until hover, b=closes #10595, c=compact-mode, workspaces

--- a/src/zen/workspaces/zen-workspaces.css
+++ b/src/zen/workspaces/zen-workspaces.css
@@ -48,6 +48,10 @@
 
       &:is(img) {
         padding: 6px;
+
+        :root:not([zen-sidebar-expanded='true']) & {
+          padding: 10px;
+        }
       }
    
       &[no-icon='true'] {
